# TARMAC

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PRODUCT_PLAN.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  first-public-run.yml
.github/workflows/: ci.yml
.roles/: ROLE.md
.roles/editorial/: citation-auditor.md  numeracy-checker.md  scope-keeper.md
.roles/panel-reviewer/: panel.md
.roles/parliament/: airport-engineer.md  aviation-economist.md  aviation-system-planner.md  environmental-community-advocate.md  operations-atc-officer.md  regional-access-advocate.md  slot-and-hub-realist.md
.roles/stakeholders/: airline.md  airport-authority.md  cargo-shipper.md  regional-traveler.md  small-community-resident.md
context/waves/: PHASES.md
context/waves/2026-06-26-tarmac-implementation/: WAVE.md
context/waves/2026-06-26-vtrace-foundation/: WAVE.md
crates/tarmac-cli/: Cargo.toml
crates/tarmac-cli/src/: main.rs
crates/tarmac-corpus/: Cargo.toml
crates/tarmac-corpus/src/: lib.rs
crates/tarmac-gap/: Cargo.toml
crates/tarmac-gap/src/: lib.rs
crates/tarmac-network/: Cargo.toml
crates/tarmac-network/src/: lib.rs
crates/tarmac-score/: Cargo.toml
crates/tarmac-tier/: Cargo.toml
docs/adoption/: README.md  first-public-run-worksheet.md
docs/vtrace/: ARCHITECTURE.md  CODE_RIGOR.md  CONOPS.md  IMPLEMENTATION_PLAN.md  INTERFACES.md  MISSION.md  REQUIREMENTS.md  REVIEW.md  SPECIFICATION_BASELINE.md  TRACE.md  VERIFICATION.md  WORK_PACKAGES.md
(+20 files in other folders)
