[package]
name = "tarmac-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tarmac-network = { path = "../tarmac-network" }
tarmac-corpus = { path = "../tarmac-corpus" }
tarmac-score = { path = "../tarmac-score" }
tarmac-tier = { path = "../tarmac-tier" }
tarmac-gap = { path = "../tarmac-gap" }
